# neo-claude

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  TECHNICAL_MANUAL.md  pyproject.toml
scripts/: backfill_revenue_growth.py  bootstrap_admin_user.py  check_threshold_freeze.py  deploy_workers.sh  export_model.py  production_gate.py  purge_retained_data.py  run_academic_ingest.py  run_all_family_backtests.py  run_backtest.py  run_benchmark_report.py  run_companies_house_ingest.py  run_companies_house_snapshot_ingest.py  run_db_migrations.py  run_demo_curation.py  run_enqueue_due_reminders.py  run_entity_resolution.py  run_feature_extraction.py  run_freeze_thresholds.py  run_label_rebuild.py  run_ops_alert_checks.py  run_outcome_labeling.py  run_quarantine_holdout.py  run_quarterly_evidence_report.py  run_release_pipeline.py  run_repeat_stability_analysis.py  run_sec_dera_cf_ingest.py  run_sec_edgar_ingest.py  run_sec_form_d_ingest.py  run_sector_classification.py  run_seed_shadow_evaluations.py  run_shadow_data_enrichment.py  run_smoke_checks.py  run_start_shadow_cycle.py  run_synthetic_analyst_pilot.py  run_synthetic_analyst_pilot_agents.py  run_text_scoring.py  run_transaction_reconciliation.py  run_transaction_truth_pipeline.py  run_transaction_weekly_qa.py  (+5 more)
tests/: conftest.py  test_academic_datasets.py  test_backtest_reliability.py  test_baselines.py  test_claude_text_scorer.py  test_companies_house.py  test_demo_curation.py  test_entity_resolution.py  test_feature_store.py  test_holdout.py  test_label_quality.py  test_metrics.py  test_production_gate.py  (+15 more)
(+140 files in other folders)
