[project]
name = "startuplens"
version = "0.1.0"
description = "AI-powered investment decision tool for equity crowdfunding"
requires-python = ">=3.12"
dependencies = [
    # Database
    "psycopg[binary]>=3.1",

    # Data processing
    "pandas>=2.2",
    "numpy>=1.26",

    # HTTP clients
    "httpx>=0.27",

    # Entity resolution
    "dedupe>=3.0",
    "unidecode>=1.3",

    # ML
    "xgboost>=2.0",
    "scikit-learn>=1.4",
    "shap>=0.45",

    # Settings
    "pydantic-settings>=2.2",

    # CLI / logging
    "structlog>=24.1",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
